changed the size

--- a/home.html
+++ b/home.html
@@ -8,11 +8,9 @@
          <header>
              <table>
                 <tr>
-                     <th><img src="./images/index.png" width=300px height=50px></th>
-                    <th >
-                    <img alt="tk tok" width=200px src="./images/logo.png">
+                    <th><img alt="tk tok" width=200px src="./images/logo.png">
                     </th>
-                    <th><img src="./images/index.png" width=800px height=50px></th>
+                    <th><img src="./images/index.png" width=700px height=50px></th>
                     <nav>
                         <th><a href="#" >Home</a></th>
                         <th><a href="#" >About</a></th>
@@ -26,21 +24,21 @@
         <section>
             <table>
                 <tr>
-                    <th><img src="./images/index.png" width=800px height=50px></th>
+                    <th><img src="./images/index.png" width=500px height=50px></th>
                     <th>
                             <h1>Make your day</h1>
                             <h3>Real people, Real videos</h3>
                     </th>
                     </table>
                     <img src="./images/index.png" width=270px height=50px>
-                    <img width=1300px src="./images/tiktok.gif">   
+                    <img width=1200px src="./images/tiktok.gif">   
         </section>
         
         <section>
             <table>
                 <tr>
                     <th>
-                        <img src="./images/index.png" width=200px height=50px>
+                        <img src="./images/index.png" width=100px height=50px>
                     </th>
                     <th><h1>Text yourself a link to download Tik Tok</h1></th>
                     <th>
@@ -50,7 +48,7 @@
                 </tr>
                 <tr>
                     <td>
-                         <img src="./images/index.png" width=300px height=50px> 
+                         <img src="./images/index.png" width=100px height=50px> 
                     </td>
                     <td>
                         <img width=500px src="./images/form.png">
@@ -60,9 +58,9 @@
                         <img src="./images/index.png" width=50px height=50px> 
                     </td>
                     <td>
-                        <img width=200px src="./images/amazonstore.png">
-                        <img width=200px src="./images/appstore.png">
-                        <img width=200px src="./images/googlestore.png">
+                        <img width=150px src="./images/amazonstore.png">
+                        <img width=150px src="./images/appstore.png">
+                        <img width=150px src="./images/googlestore.png">
                     </td>
                 </tr>
             </table>
@@ -71,7 +69,7 @@
         <footer>
             <table>
                 <tr>
-                    <td rowspan="5"><img src="./images/index.png" width=950px height=50px></td> 
+                    <td rowspan="5"><img src="./images/index.png" width=650px height=50px></td> 
                     <td>Company</td>
                     <td>Program</td>
                     <td>Support</td>
